[gd_scene load_steps=3 format=3 uid="uid://db2miy3a6hjke"]

[ext_resource type="Script" uid="uid://chm4v6kkjxwfl" path="res://scripts/ui/MissionDialog.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.15, 0.15, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="MissionDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogPanel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/DialogPanel/MarginContainer"]
layout_mode = 2

[node name="DialogText" type="RichTextLabel" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/default_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Mission message text goes here."
fit_content = true
scroll_active = false

[node name="ButtonContainer" type="HBoxContainer" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="OkButton" type="Button" parent="CenterContainer/DialogPanel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "OK"
